--- a/huu-ich/dau-tu-co-phieu/quy-dau-tu.html
+++ b/huu-ich/dau-tu-co-phieu/quy-dau-tu.html
@@ -167,8 +167,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -190,7 +190,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -306,7 +306,7 @@ data-ad-slot="3830899615">
     bán được. Lúc đó lỡ người nắm giữ cổ phiếu đang cần tiền thì sẽ gặp khó khăn khi bán cổ phiếu để lấy tiền.</p>
 <div class="flright"><a href="http://www.alkansiyanijuan.com/grow-your-money-in-mutual-funds/" target='_blank'>
     <amp-img alt="Mô hình quỹ đầu tư" src="/images/mutual-funds.gif" width="352" height="267" layout="responsive"></amp-img></a></div>
-<p><b>Quỹ đầu tư</b> là một cách <a href="../cach-dau-tu.html">đầu tư gián tiếp</a>. Quỹ đầu tư là một tổ chức sinh lợi bằng cách 
+<p><b>Quỹ đầu tư</b> là một cách <a href="../cach-dau-tu">đầu tư gián tiếp</a>. Quỹ đầu tư là một tổ chức sinh lợi bằng cách 
     đầu tư vào trái phiếu và các doanh nghiệp (đã niêm yết trên thị trường chứng khoán hoặc chưa). Việc chọn đầu tư vào ngành nào, 
     công ty nào phải tuân theo điều lệ của quỹ. Vốn của quỹ đầu tư được các nhà đầu tư góp vào. Vốn được chia thành các đơn vị 
     gọi là đơn vị quỹ, giá ban đầu của một đơn vị quỹ ở Việt Nam là 10.000VND, giá đơn vị quỹ sẽ tăng giảm trong thời gian 
@@ -412,7 +412,7 @@ data-ad-slot="3830899615">
     để mua lại đơn vị quỹ từ nhà đầu tư, nên nhà đầu tư có thể được hưởng lãi cao mà không phải để tiền kỳ hạn dài.
 <br>Giá của đơn vị quỹ đầu tư cổ phiếu tăng giảm không ổn định nhưng lợi nhuận trong dài hạn sẽ tốt hơn quỹ đầu tư trái phiếu. 
     Giá đơn vị quỹ cân bằng cũng tăng giảm nhưng với biên độ nhỏ hơn giá đơn vị quỹ đầu tư cổ phiếu. Đây là bài so sánh lợi nhuận 
-    giữa <a href="so-tk-hay-dau-tu.html">các phương tiện đầu tư khác nhau</a>.
+    giữa <a href="so-tk-hay-dau-tu">các phương tiện đầu tư khác nhau</a>.
 <br>Do tính chất trên, chúng ta tối đa hoá lợi nhuận của tiền để dành như sau:</p>
 <ol><li>những khoản chưa dùng đến trong dài hạn, trên 5 năm, để vào quỹ đầu tư cổ phiếu hoặc quỹ cân bằng</li>
 <li>những khoản sẽ dùng đến trong khoảng từ 6 tháng đến 5 năm, để vào quỹ đầu tư trái phiếu</li>
@@ -448,14 +448,14 @@ data-ad-slot="3830899615">
 </amp-ad>
 
 <div class="flright"><amp-img alt="Tích luỹ tài sản bằng quỹ mở" src="/images/Mutual-Fund.jpg" width="500" height="400" layout="responsive"></amp-img></div>
-<p>Khi tham gia quỹ đầu tư, nhà đầu tư được hưởng lợi như trực tiếp đầu tư vào doanh nghiệp, <a href="so-tk-hay-dau-tu.html">lợi nhuận 
+<p>Khi tham gia quỹ đầu tư, nhà đầu tư được hưởng lợi như trực tiếp đầu tư vào doanh nghiệp, <a href="so-tk-hay-dau-tu">lợi nhuận 
     thường cao hơn gửi tiết kiệm ở ngân hàng</a>, lại không tốn thời giờ tìm hiểu, phân tích số liệu tài chính của các doanh nghiệp 
     vì đã có nhóm chuyên gia được thuê để làm việc chuyên môn đó.
 <br>Quỹ mở rất thích hợp cho những người không có nhiều thời gian giao dịch: giáo viên, bác sĩ, kỹ sư, công nhân… Không cần lên 
     sàn đặt lệnh mua, chỉ cần mỗi tháng dành ra một ít tiền, gọi người đến chuyển vào quỹ một cách an toàn và tiện lợi. Mua đơn vị 
     quỹ tiện hơn mua vàng nhiều, chỉ cần 1 triệu đồng là có thể mua được, trong khi mua vàng SJC cần vài chục triệu đồng. Như vậy 
     mỗi tháng đều có thể chuyển tiền thành đơn vị quỹ, không phải để tiền nằm chờ gom đủ số mới chuyển thành vàng.
-<br>Dịch vụ quỹ đầu tư mở rất được nhiều người ở các nước công nghiệp hoá dùng để <a href="../tich-luy.html">tích luỹ</a> tiền thay vì 
+<br>Dịch vụ quỹ đầu tư mở rất được nhiều người ở các nước công nghiệp hoá dùng để <a href="../tich-luy">tích luỹ</a> tiền thay vì 
     gửi tiết kiệm ở ngân hàng, xem <a href="http://en.wikipedia.org/wiki/Mutual_fund" target='_blank'>Mutual fund</a>.
 <br>Cho tới cuối năm 2012, ở Việt Nam có hai bộ quỹ mở là Maxx - Phúc Lộc Thịnh Vượng của Manulife và 
     PRUlink của Prudential. Trong năm 2013, một số quỹ đóng đã chuyển thành quỹ mở như VFMVFA, VFMVF1, và một số quỹ mở mới được 
@@ -471,9 +471,9 @@ data-ad-slot="3830899615">
 </ol>
 <h1>Mức độ rủi ro</h1>
 <p>Quỹ đầu tư vào cổ phiếu có bị lỗ giống như những người <i>chơi</i> cổ phiếu không?
-<br>Bạn có thể xem lý do thua lỗ khi <i>chơi</i> cổ phiếu trong bài <a href="../de-tien-vao-dau.html">Để tiền vào đâu</a>.</p>
+<br>Bạn có thể xem lý do thua lỗ khi <i>chơi</i> cổ phiếu trong bài <a href="../de-tien-vao-dau">Để tiền vào đâu</a>.</p>
 <p>Quỹ đầu tư không dùng vốn vay nên không bị rơi vào vòng xoáy lỗ sạch vốn như đầu cơ cổ phiếu 
-    (xem <a href="../cach-dau-tu.html">Phân biệt những cách đầu tư và đầu cơ</a>).</p>
+    (xem <a href="../cach-dau-tu">Phân biệt những cách đầu tư và đầu cơ</a>).</p>
 <p>Quỹ đầu tư sẽ tăng giá và cho kết quả lời cao trong dài hạn, nhưng có vài giai đoạn ngắn giảm giá. Do đó rủi ro duy nhất của 
     quỹ đầu tư là rủi ro ngắn hạn, cách đối phó với rủi ro đó là để tiền trong quỹ đủ lâu như đã ghi ở trên.
 <br>Kết quả thực tế cho thấy các khoản đầu tư đều đặn dài hạn trong quỹ đầu tư VFMVF1 có lợi nhuận trung bình là 17,20%/năm
@@ -481,13 +481,13 @@ data-ad-slot="3830899615">
 
 <p><span class="red"><b>Chú ý</b></span>: trong những năm 2013-2014, rất nhiều người hay công ty chuyên đầu cơ ngoại tệ và 
     vàng đã lừa gạt người khác bằng cách xưng là quỹ đầu tư, công ty vàng bạc đá quý, đầu tư uỷ thác… Hãy xem thêm bài viết về 
-    <a href="../cach-dau-tu.html">các cách đầu tư</a>.</p>
+    <a href="../cach-dau-tu">các cách đầu tư</a>.</p>
 <div class="todiscuss">
 Các bài liên quan:
-<br>* <a href="../tich-luy.html">Tích luỹ tiền để đủ sống trọn đời</a>
-<br>* <a href="../cach-dau-tu.html">Phân biệt những cách đầu tư và đầu cơ</a>
-<br>* <a href="../de-tien-vao-dau.html">Kết quả đầu tư cổ phiếu dài hạn</a>
-<br>* <a href="so-tk-hay-dau-tu.html">Quỹ đầu tư cho lợi nhuận cao hơn gửi ngân hàng</a>
+<br>* <a href="../tich-luy">Tích luỹ tiền để đủ sống trọn đời</a>
+<br>* <a href="../cach-dau-tu">Phân biệt những cách đầu tư và đầu cơ</a>
+<br>* <a href="../de-tien-vao-dau">Kết quả đầu tư cổ phiếu dài hạn</a>
+<br>* <a href="so-tk-hay-dau-tu">Quỹ đầu tư cho lợi nhuận cao hơn gửi ngân hàng</a>
 <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132807056941912064" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/376324972533117" rel="nofollow" target="_blank">Facebook</a></div>
 <!-- AMP In-article 1 -->
 <amp-ad
