--- a/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu.html
+++ b/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu.html
@@ -183,8 +183,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -206,7 +206,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -268,12 +268,12 @@ https://www.lhboi.name.vn/huu-ich/dau-tu-co-phieu/so-tk-hay-dau-tu
 
 <!-- body here -->
 <p>Giả sử bạn bắt đầu để dành tiền cho tương lai gia đình theo kế hoạch dài hạn được lập bằng <a href="../ke-hoach-tai-chinh/">KHTC</a>, bạn sẽ giữ tiền bằng cách nào?
-<br>Cách chắc chắn nhất để thực hiện kế hoạch hàng tỉ đồng là <a href="../cau-chuyen/nhung-quyet-dinh-tot-cho-tuoi-gia.html">để dành đều đặn mỗi tháng</a>. Với việc tích luỹ dần như vậy thì bạn có hai phương tiện:</p>
+<br>Cách chắc chắn nhất để thực hiện kế hoạch hàng tỉ đồng là <a href="../cau-chuyen/nhung-quyet-dinh-tot-cho-tuoi-gia">để dành đều đặn mỗi tháng</a>. Với việc tích luỹ dần như vậy thì bạn có hai phương tiện:</p>
 <ol>
 <li>Gửi tiết kiệm ngân hàng</li>
-<li>Gửi vào <a href="quy-dau-tu.html">quỹ đầu tư</a></li>
+<li>Gửi vào <a href="quy-dau-tu">quỹ đầu tư</a></li>
 </ol>
-<p>(Đừng mua vàng hay USD để dành, lý do được giải thích trong <a href="../tich-luy-dai-han.html">bài này</a>.)</p>
+<p>(Đừng mua vàng hay USD để dành, lý do được giải thích trong <a href="../tich-luy-dai-han">bài này</a>.)</p>
 <p>Các nhà kinh tế nói rằng đầu tư dài hạn vào quỹ đầu tư sẽ có lợi hơn gửi tiết kiệm ở ngân hàng. Lý thuyết đó có đúng trong thực tế không, và nhất là có đúng với thị trường Việt Nam không?</p>
 <!-- AMP In-article 1 -->
 <amp-ad
@@ -398,7 +398,7 @@ data-ad-slot="3830899615">
  lần gửi ngân hàng</b></li>
 </ul></span>
 
-<p>Nhìn từ một hướng khác, những người thực hành công thức <a href="../chi-tieu.html">"Thu nhập - Tiết kiệm = Chi tiêu"</a> sẽ thấy dễ sống hơn với mức lợi nhuận cao của quỹ đầu tư. Lợi nhuận cao thì chỉ cần tiết kiệm ít hơn, chi tiêu nhiều hơn mà vẫn đạt kế hoạch tài chính tương lai. Ví dụ, để có 5 tỉ đồng sau 30 năm, người ta phải tiết kiệm:</p>
+<p>Nhìn từ một hướng khác, những người thực hành công thức <a href="../chi-tieu">"Thu nhập - Tiết kiệm = Chi tiêu"</a> sẽ thấy dễ sống hơn với mức lợi nhuận cao của quỹ đầu tư. Lợi nhuận cao thì chỉ cần tiết kiệm ít hơn, chi tiêu nhiều hơn mà vẫn đạt kế hoạch tài chính tương lai. Ví dụ, để có 5 tỉ đồng sau 30 năm, người ta phải tiết kiệm:</p>
 <ul>
 <li>2,532 triệu đồng mỗi tháng và tăng dần 5% sau mỗi năm, nếu lợi nhuận trung bình 7%/năm như gửi tiết kiệm ở ngân hàng</li>
 <li>1,587 triệu đồng mỗi tháng và tăng dần 5% sau mỗi năm, nếu lợi nhuận trung bình 10%/năm như gửi quỹ đầu tư</li>
@@ -406,7 +406,7 @@ data-ad-slot="3830899615">
 
 <h1>Tại sao quỹ đầu tư cho lời cao hơn ngân hàng?</h1>
 <p>Quỹ đầu tư là gì mà nó sinh lời nhiều hơn gửi tiết kiệm ở ngân hàng?
-<br>Mời bạn xem bài giải thích về <a href="quy-dau-tu.html">quỹ đầu tư</a>.</p>
+<br>Mời bạn xem bài giải thích về <a href="quy-dau-tu">quỹ đầu tư</a>.</p>
 <!-- AMP In-article 1 -->
 <amp-ad
 media="(max-width: 399px)"
@@ -442,11 +442,11 @@ data-ad-slot="3830899615">
 
 <div class="todiscuss">
 Các bài liên quan:
-<br>* <a href="../chi-tieu.html">Chi tiêu có kế hoạch để tự do tài chính</a>
+<br>* <a href="../chi-tieu">Chi tiêu có kế hoạch để tự do tài chính</a>
 <br>* <a href="../ke-hoach-tai-chinh/">Lập kế hoạch ổn định tài chính suốt đời thật đơn giản</a>
-<br>* <a href="../tich-luy-dai-han.html">So sánh các cách tích luỹ dài hạn</a>
-<br>* <a href="quy-dau-tu.html">Tìm hiểu về quỹ đầu tư</a>
-<br>* <a href="../cau-chuyen/nhung-quyet-dinh-tot-cho-tuoi-gia.html">Những quyết định tốt cho tuổi già</a>
+<br>* <a href="../tich-luy-dai-han">So sánh các cách tích luỹ dài hạn</a>
+<br>* <a href="quy-dau-tu">Tìm hiểu về quỹ đầu tư</a>
+<br>* <a href="../cau-chuyen/nhung-quyet-dinh-tot-cho-tuoi-gia">Những quyết định tốt cho tuổi già</a>
 <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132808171318173697" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/627783754053903" rel="nofollow" target="_blank">Facebook</a></div>
 
   <hr>
