--- a/huu-ich/dau-tu-co-phieu/thi-truong-xuong-doc.html
+++ b/huu-ich/dau-tu-co-phieu/thi-truong-xuong-doc.html
@@ -168,8 +168,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -191,7 +191,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -255,7 +255,7 @@ data-ad-slot="5275186684">
 <!-- body here -->
 <p>Dịch từ bài <a href="https://twocents.lifehacker.com/how-to-prevent-market-dips-from-tanking-your-retirement-1831617500" target='_blank'>
   Làm cách nào để ngăn chặn ảnh hưởng đến quỹ hưu trí của bạn khi thị trường cổ phiếu xuống đáy</a>.</p>
-<p>(Đa số người Mỹ <a href="../tich-luy.html">tích luỹ</a> tiền để dùng khi về hưu trong các <a href="quy-dau-tu.html">quỹ đầu tư</a> cổ phiếu. 
+<p>(Đa số người Mỹ <a href="../tich-luy">tích luỹ</a> tiền để dùng khi về hưu trong các <a href="quy-dau-tu">quỹ đầu tư</a> cổ phiếu. 
   Bài này viết về ảnh hưởng của thị trường cổ phiếu đến quỹ hưu của người dân.)</p>
 <div class="flright"><amp-img alt="Thị trường lên xuống" src="/images/MarketDown.png" width="769" height="518" layout="responsive">
   </amp-img></a></div>
@@ -300,8 +300,8 @@ data-ad-slot="3830899615">
   Retirement Café blog</a>, thêm vào: “Đánh giá ảnh hưởng của sự sụt giảm ở thị trường bằng con số phần trăm của tổng tài sản thì 
   đỡ ám ảnh hơn là đánh giá bằng số tiền đã giảm mất”.<br>
 (Bạn cần ghi sổ những khoản đầu tư, tài sản lâu năm của mình để luôn luôn biết rõ tình hình tài chính. Tôi dùng 
-  <a href="/kinh-nghiem/may-tinh/gnucash.html">GnuCash</a> ghi sổ những thu chi hàng ngày, và spreadsheet ghi sổ những 
-  <a href="../ke-hoach-tai-chinh/dau-tu-dai-han.html">tài sản lâu năm</a>.)</p>
+  <a href="/kinh-nghiem/may-tinh/gnucash">GnuCash</a> ghi sổ những thu chi hàng ngày, và spreadsheet ghi sổ những 
+  <a href="../ke-hoach-tai-chinh/dau-tu-dai-han">tài sản lâu năm</a>.)</p>
 <p>Tóm những ý trên lại là: ảnh hưởng của việc thị trường đi xuống trong những năm đầu của kế hoạch tích luỹ hưu trí sẽ được 
   bù đắp lại trong quá trình tích luỹ. Nếu bạn bán đi cổ phiếu của bạn khi thị trường xuống thấp để lấy tiền chi tiêu, bạn sẽ 
   còn ít cổ phiếu hơn để sinh lời trong tương lai.</p>
