--- a/huu-ich/cac-loai-bao-hiem/bhnt-lien-ket-chung.html
+++ b/huu-ich/cac-loai-bao-hiem/bhnt-lien-ket-chung.html
@@ -166,8 +166,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -189,7 +189,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -285,12 +285,12 @@ data-ad-client="ca-pub-2242556057278004"
 data-ad-slot="3830899615">
 </amp-ad>
 
-<p>Hợp đồng bảo hiểm nhân thọ truyền thống chỉ bắt đầu có <a href="phi-bao-hiem-nhan-tho.html">giá trị hoàn lại và bảo tức</a> sau khi đóng phí hơn một năm. Giá trị hoàn lại và bảo tức trong những năm đầu rất nhỏ so với phí đóng vào. Do đó người ta thường nói huỷ hợp đồng bảo hiểm trong những năm đầu thì lỗ nặng.<br>
-Mỗi hợp đồng bảo hiểm nhân thọ liên kết chung có một tài khoản tiền. Tài khoản đó <span class="tmark">có tiền ngay</span> khi hợp đồng có hiệu lực, số tiền ban đầu cũng đáng kể so với phí đã đóng. Tiền trong tài khoản sinh lời tương đương hoặc cao hơn lãi suất tiết kiệm 12 tháng ở ngân hàng, tiền lời nhập vốn mỗi tháng (làm cho <span class="tmark">lợi nhuận thực tế cao hơn</span>). Tài khoản bảo hiểm nhân thọ liên kết chung cũng được sinh lời như một <a href="/huu-ich/dau-tu-co-phieu/quy-dau-tu.html">quỹ đầu tư</a> trái phiếu. Mỗi tháng tài khoản phải chi một số tiền vài chục ngàn cho phí quản lý hợp đồng và để có số tiền bảo hiểm hàng trăm triệu đồng. Khách hàng có thể gửi thêm tiền vào tài khoản để nhận tiền lời. Khi <i><span class="tmark">thật cần tiền</span></i>, khách hàng cũng có thể rút tiền ra hoặc vay tiền tới 80% giá trị tài khoản. Khách hàng nên tham khảo tư vấn viên để quyết định chọn vay hay rút tiền từ tài khoản để có lợi nhất.</p>
+<p>Hợp đồng bảo hiểm nhân thọ truyền thống chỉ bắt đầu có <a href="phi-bao-hiem-nhan-tho">giá trị hoàn lại và bảo tức</a> sau khi đóng phí hơn một năm. Giá trị hoàn lại và bảo tức trong những năm đầu rất nhỏ so với phí đóng vào. Do đó người ta thường nói huỷ hợp đồng bảo hiểm trong những năm đầu thì lỗ nặng.<br>
+Mỗi hợp đồng bảo hiểm nhân thọ liên kết chung có một tài khoản tiền. Tài khoản đó <span class="tmark">có tiền ngay</span> khi hợp đồng có hiệu lực, số tiền ban đầu cũng đáng kể so với phí đã đóng. Tiền trong tài khoản sinh lời tương đương hoặc cao hơn lãi suất tiết kiệm 12 tháng ở ngân hàng, tiền lời nhập vốn mỗi tháng (làm cho <span class="tmark">lợi nhuận thực tế cao hơn</span>). Tài khoản bảo hiểm nhân thọ liên kết chung cũng được sinh lời như một <a href="/huu-ich/dau-tu-co-phieu/quy-dau-tu">quỹ đầu tư</a> trái phiếu. Mỗi tháng tài khoản phải chi một số tiền vài chục ngàn cho phí quản lý hợp đồng và để có số tiền bảo hiểm hàng trăm triệu đồng. Khách hàng có thể gửi thêm tiền vào tài khoản để nhận tiền lời. Khi <i><span class="tmark">thật cần tiền</span></i>, khách hàng cũng có thể rút tiền ra hoặc vay tiền tới 80% giá trị tài khoản. Khách hàng nên tham khảo tư vấn viên để quyết định chọn vay hay rút tiền từ tài khoản để có lợi nhất.</p>
 <p>Bảo hiểm nhân thọ liên kết chung thích nghi với trượt giá ở nhiều mặt:</p>
 <ol><li>Trượt giá làm cho số tiền bảo hiểm lúc ban đầu trở nên nhỏ hơn nhu cầu bảo vệ, khách hàng có thể yêu cầu tăng số tiền bảo hiểm lên cho đúng nhu cầu mới, không cần ký thêm hợp đồng mới, không tốn phí ban đầu</li>
 <li>Trượt giá làm cho người lo xa phải tiết kiệm số tiền lớn hơn, khách hàng có thể đóng nhiều tiền hơn vào hợp đồng bảo hiểm nhân thọ liên kết chung một cách dễ dàng.</li>
-<li>Khi lãi suất của bảo hiểm nhân thọ liên kết chung <a href="../tich-luy.html">không lớn hơn trượt giá</a>, nếu khách hàng có cách sinh lợi an toàn và lãi suất cao hơn thì có thể rút tiền từ hợp đồng bảo hiểm nhân thọ liên kết chung ra dễ dàng và vẫn duy trì sự bảo vệ tài chính.</li>
+<li>Khi lãi suất của bảo hiểm nhân thọ liên kết chung <a href="../tich-luy">không lớn hơn trượt giá</a>, nếu khách hàng có cách sinh lợi an toàn và lãi suất cao hơn thì có thể rút tiền từ hợp đồng bảo hiểm nhân thọ liên kết chung ra dễ dàng và vẫn duy trì sự bảo vệ tài chính.</li>
 </ol>
 <!-- AMP In-article 1 -->
 <amp-ad
@@ -320,7 +320,7 @@ data-ad-slot="3830899615">
 
 <p>Hợp đồng bảo hiểm nhân thọ truyền thống được tính sẵn sao cho số tiền bảo hiểm gần bằng giá trị hoàn lại (như vậy khách hàng chắc chắn sẽ có số tiền đã định), tỉ lệ giữa số tiền đó và phí đóng hàng năm do chương trình máy tính định sẵn và phí đóng vào không đổi suốt thời hạn hợp đồng.<br>
 Hợp đồng bảo hiểm nhân thọ liên kết chung không có ràng buộc như vậy, khách hàng được chọn và được thay đổi tỉ lệ giữa số tiền bảo hiểm trên phí đóng vào. Khách hàng có thể chọn số tiền bảo hiểm cao, phí đóng thấp để hợp đồng có <span class="tmark">tính bảo vệ cao</span>. Khách hàng có thể chọn số tiền bảo hiểm thấp, phí đóng cao để hợp đồng có <span class="tmark">tính tích luỹ cao</span>. Giữa hai thái cực đó, khách hàng có thể chọn những tỉ lệ thích hợp cho gia đình mình trong <a href="https://lhboi.name.vn/huu-ich/cac-giai-doan">từng giai đoạn</a>. Có thể nói rằng <i>không có dịch vụ nào thay thế được bảo hiểm nhân thọ về mặt bảo vệ tài chính</i> và cũng <i>ít có dịch vụ nào tốt hơn bảo hiểm nhân thọ về mặt tích luỹ tài sản dài hạn</i>.<br>
-Dịch vụ tiết kiệm ở ngân hàng chỉ tốt trong kỳ hạn dưới 1-2 năm. Khi <a href="../tich-luy.html">tích luỹ dài hạn</a> 15-30 năm, gửi ở ngân hàng sẽ khó đạt được mục tiêu đề ra vì:<br>
+Dịch vụ tiết kiệm ở ngân hàng chỉ tốt trong kỳ hạn dưới 1-2 năm. Khi <a href="../tich-luy">tích luỹ dài hạn</a> 15-30 năm, gửi ở ngân hàng sẽ khó đạt được mục tiêu đề ra vì:<br>
 <ol><li>Khách hàng không nhớ gửi tiền vào ngân hàng còn công ty bảo hiểm nhắc khách hàng tiết kiệm đều đặn.</li>
 <li>Khi đáo hạn sổ tiết kiệm, người ta thường lấy một phần tiền lãi đem tiêu vì nó <i>lẻ</i>, cho nên dù không mất đi đâu đồng nào nhưng kết quả tiết kiệm dài hạn sẽ ít hơn tính toán. Một số người thậm chí còn tiêu cả phần gốc khi bị cám dỗ trong những đợt khuyến mãi tivi, xe mới, điện thoại mới… Tiền để trong tài khoản bảo hiểm không tự quay về khách hàng nên không bị hao hụt.</li>
 <li>Người ta thường chờ đến khi sổ cũ đáo hạn để gửi thêm vì ngại phải giữ quá nhiều sổ tiết kiệm, như vậy tiền nằm chờ một thời gian không sinh lãi và dễ bị tiêu bớt. Trong khi đó, chỉ cần gọi điện thoại là công ty bảo hiểm nhân thọ cử người đến tận nơi nhận tiền nhập vào tài khoản liên kết chung để sinh lời ngay.</li>
@@ -361,9 +361,9 @@ Một người bắt đầu đi làm sẽ lập các kế hoạch như lập gia
 <p>Sản phẩm bảo hiểm nhân thọ liên kết chung Gia Đình Tôi Yêu của Manulife với mức phí từ 585 ngàn đồng mỗi tháng là một con dao xếp Thuỵ Sĩ cho ngân sách gia đình, với nhiều lưỡi để đối phó với các vấn đề khác nhau, vừa để bảo vệ vừa để tích luỹ tài sản. Ai cần dùng lưỡi nào thì mở lưỡi đó ra, không cần thì xếp vào.</p>
 <div class="todiscuss">
 Các bài liên quan:
-<br>* <a href="phi-bao-hiem-nhan-tho.html">Tiền đóng BHNT sẽ đi đâu?</a>
-<br>* <a href="../dau-tu-co-phieu/quy-dau-tu.html">Tìm hiểu về quỹ đầu tư</a>
-<br>* <a href="../tich-luy.html">Tích luỹ tiền để đủ sống trọn đời</a>
+<br>* <a href="phi-bao-hiem-nhan-tho">Tiền đóng BHNT sẽ đi đâu?</a>
+<br>* <a href="../dau-tu-co-phieu/quy-dau-tu">Tìm hiểu về quỹ đầu tư</a>
+<br>* <a href="../tich-luy">Tích luỹ tiền để đủ sống trọn đời</a>
 <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132804613009051648" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/376045612561053" rel="nofollow" target="_blank">Facebook</a></div>
 <!-- AMP In-article 1 -->
 <amp-ad
