--- a/huu-ich/cac-loai-bao-hiem/index.html
+++ b/huu-ich/cac-loai-bao-hiem/index.html
@@ -166,8 +166,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -189,7 +189,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -340,8 +340,8 @@ data-ad-slot="3830899615">
   <h1>Ý nghĩa của bảo hiểm</h1>
   <p>Về hình thức thì bảo hiểm là một thứ phí giống như phí giữ xe vậy. Ai sợ mất xe thì phải trả phí giữ xe. Ai <b>sợ mất tiền</b> thì trả phí bảo hiểm. Khi bị mất xe thì ta chỉ nhận được bồi thường ít hơn hoặc bằng giá trị chiếc xe, còn bảo hiểm có thể đền số tiền ta đang có và cả số tiền ta chưa có (tức là số tiền sẽ làm ra trong tương lai).
   </p>
-  <p>Khi tham gia bảo hiểm thì mình đóng một khoản phí để khi có rủi ro sẽ nhận được số tiền bảo hiểm. Khoản phí đó dùng để chia sẻ rủi ro giữa những người cùng tham gia bảo hiểm: người gặp rủi ro nhận tiền của những người chưa gặp rủi ro. Mua bảo hiểm mà không gặp rủi ro cũng giống như đem tiền đi làm <a href="/huu-ich/chi-tieu.html">từ thiện</a>: giúp những người không may.
-  <br><a href="/huu-ich/cac-loai-bao-hiem/phi-bao-hiem-nhan-tho.html">Tiền đóng bảo hiểm</a> cũng giống tiền mua vé số ở chỗ tiền của nhiều người góp lại đưa cho một số ít người. Nhưng bảo hiểm và xổ số khác nhau ở chỗ: người mua vé số muốn được nhận tiền thưởng, người tham gia bảo hiểm không mong nhận tiền bồi thường.
+  <p>Khi tham gia bảo hiểm thì mình đóng một khoản phí để khi có rủi ro sẽ nhận được số tiền bảo hiểm. Khoản phí đó dùng để chia sẻ rủi ro giữa những người cùng tham gia bảo hiểm: người gặp rủi ro nhận tiền của những người chưa gặp rủi ro. Mua bảo hiểm mà không gặp rủi ro cũng giống như đem tiền đi làm <a href="/huu-ich/chi-tieu">từ thiện</a>: giúp những người không may.
+  <br><a href="/huu-ich/cac-loai-bao-hiem/phi-bao-hiem-nhan-tho">Tiền đóng bảo hiểm</a> cũng giống tiền mua vé số ở chỗ tiền của nhiều người góp lại đưa cho một số ít người. Nhưng bảo hiểm và xổ số khác nhau ở chỗ: người mua vé số muốn được nhận tiền thưởng, người tham gia bảo hiểm không mong nhận tiền bồi thường.
   <br>Khi xem bảo hiểm là phí thì mình phải tính sao cho tốn ít phí nhất mà vẫn đạt mục đích bảo hiểm.
   </p>
   <div class="flright">
@@ -357,7 +357,7 @@ data-ad-slot="3830899615">
     <li>người có bệnh thì có nguy cơ chết sớm hơn người khoẻ mạnh,</li>
     <li>người làm việc nguy hiểm như quân nhân, cảnh sát thì có nguy cơ chết hoặc thương tật bất ngờ</li>
   </ul>
-  <p>Tất nhiên là các công ty bảo hiểm sẽ không bán bảo hiểm cho khách hàng có nguy cơ gặp rủi ro cao, cũng giống như các công ty xổ số không bán vé số đã biết kết quả. Do đó, khi đã có một <a href="../ke-hoach-tai-chinh/">kế hoạch tài chính</a> cho gia đình thì hãy bảo vệ nó bằng bảo hiểm ngay; tham gia bảo hiểm càng sớm càng <a href="phi-bao-hiem-nhan-tho.html">tốn ít tiền</a>; đừng đợi đến khi cảm thấy có rủi ro đe doạ rồi mới tìm đến bảo hiểm, có thể lúc đó bạn sẽ sốc vì công ty bảo hiểm từ chối nhận tiền của bạn. Tôi đã thấy nhiều người quen bị công ty bảo hiểm từ chối nhận tiền.
+  <p>Tất nhiên là các công ty bảo hiểm sẽ không bán bảo hiểm cho khách hàng có nguy cơ gặp rủi ro cao, cũng giống như các công ty xổ số không bán vé số đã biết kết quả. Do đó, khi đã có một <a href="../ke-hoach-tai-chinh/">kế hoạch tài chính</a> cho gia đình thì hãy bảo vệ nó bằng bảo hiểm ngay; tham gia bảo hiểm càng sớm càng <a href="phi-bao-hiem-nhan-tho">tốn ít tiền</a>; đừng đợi đến khi cảm thấy có rủi ro đe doạ rồi mới tìm đến bảo hiểm, có thể lúc đó bạn sẽ sốc vì công ty bảo hiểm từ chối nhận tiền của bạn. Tôi đã thấy nhiều người quen bị công ty bảo hiểm từ chối nhận tiền.
   </p>
 <!-- AMP In-article 1 -->
 <amp-ad
@@ -405,9 +405,9 @@ data-ad-slot="3830899615">
   </p>
   <p>Liên quan đến con người thì có hai dạng bảo hiểm chính là bảo hiểm phi nhân thọ và bảo hiểm nhân thọ.
   <br><b>Bảo hiểm phi nhân thọ</b> có các loại như bảo hiểm y tế, bảo hiểm tai nạn, bảo hiểm tử vong. Bảo hiểm phi nhân thọ thường có thời hạn một năm, <span class="tmark">không có <i>giá trị hoàn lại</i></span> (nghĩa là công ty bảo hiểm không trả lại tiền khi hết hạn hợp đồng). Bảo hiểm phi nhân thọ thường được bán theo từng gói với số tiền bảo hiểm đã định trước, muốn mua số tiền khác cũng không được (trừ trường hợp mua tập thể thì có thể thương lượng gói riêng).
-  <br><b>Bảo hiểm nhân thọ</b> là một kế hoạch để dành tiền kết hợp với bảo vệ số tiền sắp có. Bảo hiểm nhân thọ bảo vệ số tiền trước các vấn đề tử vong, tai nạn, bệnh tật. Bảo hiểm nhân thọ thường có thời hạn dài, có <i>giá trị hoàn lại</i>. <span class="tmark">Giá trị hoàn lại</span> của bảo hiểm nhân thọ là khoản tiền khách hàng nhận được khi không có rủi ro, là kết quả của việc tiết kiệm, <a href="../tich-luy.html">tích luỹ</a> khi đóng phí bảo hiểm. Một phần tiền từ khách hàng đóng vào hợp đồng bảo hiểm nhân thọ sẽ được tích luỹ như khoản tiết kiệm dài hạn. Lợi nhuận của việc tiết kiệm bằng bảo hiểm này tương đương lợi nhuận gửi ngân hàng kỳ hạn 12 tháng.
-  <br><a href="phi-bao-hiem-nhan-tho.html">Tiền đóng vào bảo hiểm</a> còn phải trích một phần cho mục đích chia sẻ rủi ro nữa, nên lợi nhuận chung hơi thấp hơn ngân hàng. Do đó người mua bảo hiểm mà so mức lợi nhuận giữa bảo hiểm và ngân hàng, và <b>quên</b> mục đích bảo hiểm, sẽ hết muốn mua nữa. Người ta quên rằng bảo hiểm và tiết kiệm là hai dịch vụ khác nhau, khó so sánh được. Mua bảo hiểm nhân thọ là dùng hai dịch vụ cùng một lúc.
-  <br><b>Đối với những người khó giữ tiền</b>, tuy tiết kiệm bằng bảo hiểm nhân thọ thì lợi nhuận thấp hơn ngân hàng nhưng lại cho <span class="tmark">kết quả tốt hơn ngân hàng</span> vì tiết kiệm bằng bảo hiểm là việc tiết kiệm có kỷ luật: cứ đúng hạn là có người nhắc nộp tiền, không tiện rút ra trước hạn. Tiền ở trong bảo hiểm không định kỳ quay lại tay người chủ như sổ tiết kiệm nên ít bị chi tiêu bất chợt. Nhờ tính kỷ luật đó mà người tham gia bảo hiểm tránh được các cám dỗ tiêu dùng, đỡ quên nộp tiền vào ngân hàng, đỡ rút tiền khi bị khuyến mãi dụ dỗ. Nếu thu nhập của bạn đủ sống mà tài sản của bạn không tăng lên như đồ thị trong trang <a href="../tich-luy-4.html">Tích luỹ tài sản</a> thì bạn thuộc nhóm người khó giữ tiền, nhóm đó chiếm hơn 90% dân số Việt Nam.
+  <br><b>Bảo hiểm nhân thọ</b> là một kế hoạch để dành tiền kết hợp với bảo vệ số tiền sắp có. Bảo hiểm nhân thọ bảo vệ số tiền trước các vấn đề tử vong, tai nạn, bệnh tật. Bảo hiểm nhân thọ thường có thời hạn dài, có <i>giá trị hoàn lại</i>. <span class="tmark">Giá trị hoàn lại</span> của bảo hiểm nhân thọ là khoản tiền khách hàng nhận được khi không có rủi ro, là kết quả của việc tiết kiệm, <a href="../tich-luy">tích luỹ</a> khi đóng phí bảo hiểm. Một phần tiền từ khách hàng đóng vào hợp đồng bảo hiểm nhân thọ sẽ được tích luỹ như khoản tiết kiệm dài hạn. Lợi nhuận của việc tiết kiệm bằng bảo hiểm này tương đương lợi nhuận gửi ngân hàng kỳ hạn 12 tháng.
+  <br><a href="phi-bao-hiem-nhan-tho">Tiền đóng vào bảo hiểm</a> còn phải trích một phần cho mục đích chia sẻ rủi ro nữa, nên lợi nhuận chung hơi thấp hơn ngân hàng. Do đó người mua bảo hiểm mà so mức lợi nhuận giữa bảo hiểm và ngân hàng, và <b>quên</b> mục đích bảo hiểm, sẽ hết muốn mua nữa. Người ta quên rằng bảo hiểm và tiết kiệm là hai dịch vụ khác nhau, khó so sánh được. Mua bảo hiểm nhân thọ là dùng hai dịch vụ cùng một lúc.
+  <br><b>Đối với những người khó giữ tiền</b>, tuy tiết kiệm bằng bảo hiểm nhân thọ thì lợi nhuận thấp hơn ngân hàng nhưng lại cho <span class="tmark">kết quả tốt hơn ngân hàng</span> vì tiết kiệm bằng bảo hiểm là việc tiết kiệm có kỷ luật: cứ đúng hạn là có người nhắc nộp tiền, không tiện rút ra trước hạn. Tiền ở trong bảo hiểm không định kỳ quay lại tay người chủ như sổ tiết kiệm nên ít bị chi tiêu bất chợt. Nhờ tính kỷ luật đó mà người tham gia bảo hiểm tránh được các cám dỗ tiêu dùng, đỡ quên nộp tiền vào ngân hàng, đỡ rút tiền khi bị khuyến mãi dụ dỗ. Nếu thu nhập của bạn đủ sống mà tài sản của bạn không tăng lên như đồ thị trong trang <a href="../tich-luy-4">Tích luỹ tài sản</a> thì bạn thuộc nhóm người khó giữ tiền, nhóm đó chiếm hơn 90% dân số Việt Nam.
   <br>Tóm lại, bảo hiểm nhân thọ là một cách tích luỹ tiền có kết quả chắc chắn, vượt qua những thất thoát kiểm soát được (cám dỗ tiêu dùng) cũng như không kiểm soát được (rủi ro).
   </p>
 <!-- AMP In-article 1 -->
@@ -437,24 +437,24 @@ data-ad-slot="3830899615">
 </amp-ad>
   <h3>Các loại bảo hiểm linh hoạt</h3>
   <p>Những sản phẩm bảo hiểm nhân thọ thiết kế theo kiểu truyền thống (kiểu cũ) thì <i>giá trị hoàn lại</i> gần bằng <i>số tiền bảo hiểm</i> làm cho người tham gia bảo hiểm bị <b>buộc</b> phải tiết kiệm tương đương với số tiền bảo hiểm rủi ro. Sản phẩm kiểu cũ cũng cố định về thời hạn hợp đồng, thời hạn đóng phí.
-  <br>Về sau có những sản phẩm <a href="bhnt-lien-ket-chung.html">bảo hiểm nhân thọ liên kết chung</a>: <i><span class="tmark">linh hoạt</span></i> giữa hai mục đích bảo hiểm và tích luỹ, người tham gia bảo hiểm tự chọn số tiền bảo hiểm và giá trị hoàn lại khác nhau, tự quyết định thời hạn bảo hiểm, thời hạn đóng phí. Khách hàng có thể chọn số tiền bảo hiểm cao và giá trị hoàn lại thấp để đóng phí thấp, phần tiền tiết kiệm còn lại đem gửi vào chỗ nào có lãi suất cao và an toàn. Tất nhiên muốn được tối ưu như vậy thì khách hàng hoặc tư vấn viên tài chính phải thật hiểu về kế hoạch tài chính để chọn đúng kế hoạch <a href="../tich-luy.html">tích luỹ</a> và kế hoạch bảo hiểm sao cho <i>dù có rủi ro hay không thì gia đình vẫn có đủ số tiền vào lúc cần dùng đến</i>. Nghĩa là phải thực hiện song song hai kế hoạch để có cùng một kết quả như sản phẩm bảo hiểm truyền thống ở trên với số tiền bỏ ra ít hơn.
-  <br>Với mục tiêu <a href="../tich-luy-dai-han.html">để dành tiền dài hạn</a> thì <b><a href="bhnt-lien-ket-chung.html">bảo hiểm liên kết chung</a> cho kết quả tốt hơn gửi ngân hàng</b>.
-  <br>Lại có loại sản phẩm bảo hiểm liên kết với việc đầu tư, cho người tham gia bảo hiểm cơ hội đầu tư một cách chuyên nghiệp và an toàn trên <a href="../dau-tu-co-phieu/">thị trường chứng khoán</a> với <a href="../dau-tu-co-phieu/so-tk-hay-dau-tu.html">lợi nhuận cao hơn lãi tiết kiệm ngân hàng</a>.
+  <br>Về sau có những sản phẩm <a href="bhnt-lien-ket-chung">bảo hiểm nhân thọ liên kết chung</a>: <i><span class="tmark">linh hoạt</span></i> giữa hai mục đích bảo hiểm và tích luỹ, người tham gia bảo hiểm tự chọn số tiền bảo hiểm và giá trị hoàn lại khác nhau, tự quyết định thời hạn bảo hiểm, thời hạn đóng phí. Khách hàng có thể chọn số tiền bảo hiểm cao và giá trị hoàn lại thấp để đóng phí thấp, phần tiền tiết kiệm còn lại đem gửi vào chỗ nào có lãi suất cao và an toàn. Tất nhiên muốn được tối ưu như vậy thì khách hàng hoặc tư vấn viên tài chính phải thật hiểu về kế hoạch tài chính để chọn đúng kế hoạch <a href="../tich-luy">tích luỹ</a> và kế hoạch bảo hiểm sao cho <i>dù có rủi ro hay không thì gia đình vẫn có đủ số tiền vào lúc cần dùng đến</i>. Nghĩa là phải thực hiện song song hai kế hoạch để có cùng một kết quả như sản phẩm bảo hiểm truyền thống ở trên với số tiền bỏ ra ít hơn.
+  <br>Với mục tiêu <a href="../tich-luy-dai-han">để dành tiền dài hạn</a> thì <b><a href="bhnt-lien-ket-chung">bảo hiểm liên kết chung</a> cho kết quả tốt hơn gửi ngân hàng</b>.
+  <br>Lại có loại sản phẩm bảo hiểm liên kết với việc đầu tư, cho người tham gia bảo hiểm cơ hội đầu tư một cách chuyên nghiệp và an toàn trên <a href="../dau-tu-co-phieu/">thị trường chứng khoán</a> với <a href="../dau-tu-co-phieu/so-tk-hay-dau-tu">lợi nhuận cao hơn lãi tiết kiệm ngân hàng</a>.
   </p>
 
-  <div class="center">sang trang 1 - <a href="../cac-loai-bao-hiem-2.html">2</a> - <a href="../cac-loai-bao-hiem-3.html">3</a>
+  <div class="center">sang trang 1 - <a href="../cac-loai-bao-hiem-2">2</a> - <a href="../cac-loai-bao-hiem-3">3</a>
   </div>
 
   <div class="todiscuss">
 Các bài liên quan:
-<br>* <a href="../chi-tieu.html">Chi tiêu có kế hoạch để tự do tài chính</a>
-<br>* <a href="phi-bao-hiem-nhan-tho.html">Tiền đóng BHNT sẽ đi đâu?</a>
-<br>* <a href="bhnt-lien-ket-chung.html">BHNT liên kết chung là gì?</a>
-<br>* <a href="../tich-luy.html">Tích luỹ tiền để đủ sống trọn đời</a>
+<br>* <a href="../chi-tieu">Chi tiêu có kế hoạch để tự do tài chính</a>
+<br>* <a href="phi-bao-hiem-nhan-tho">Tiền đóng BHNT sẽ đi đâu?</a>
+<br>* <a href="bhnt-lien-ket-chung">BHNT liên kết chung là gì?</a>
+<br>* <a href="../tich-luy">Tích luỹ tiền để đủ sống trọn đời</a>
 <br>* <a href="../ke-hoach-tai-chinh/">Lập kế hoạch ổn định tài chính suốt đời thật đơn giản</a>
-<br>* <a href="../tich-luy-dai-han.html">So sánh các cách tích luỹ tài sản dài hạn</a>
+<br>* <a href="../tich-luy-dai-han">So sánh các cách tích luỹ tài sản dài hạn</a>
 <br>* <a href="../dau-tu-co-phieu/">Một cách đầu tư cổ phiếu ít rủi ro</a>
-<br>* <a href="../dau-tu-co-phieu/so-tk-hay-dau-tu.html">Quỹ đầu tư cho lợi nhuận cao hơn gửi ngân hàng</a>
+<br>* <a href="../dau-tu-co-phieu/so-tk-hay-dau-tu">Quỹ đầu tư cho lợi nhuận cao hơn gửi ngân hàng</a>
 <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132804613009051648" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/376045612561053" rel="nofollow" target="_blank">Facebook</a>
   </div>
 <!-- AMP In-article 1 -->
