--- a/huu-ich/cac-loai-bao-hiem/phi-bao-hiem-nhan-tho.html
+++ b/huu-ich/cac-loai-bao-hiem/phi-bao-hiem-nhan-tho.html
@@ -166,8 +166,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -189,7 +189,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -343,7 +343,7 @@ data-ad-slot="3830899615">
 </amp-ad>
 
 <h4>Tiền lời trong sản phẩm bảo hiểm nhân thọ kiểu <i>liên kết chung</i></h4>
-<p>Những sản phẩm bảo hiểm nhân thọ kiểu <i><a href="bhnt-lien-ket-chung.html">liên kết chung</a></i> sẽ không có bảo tức chia hàng năm, thay vào đó khách hàng có một tài khoản như tài khoản ở ngân hàng, mỗi tháng lãi trên số dư tài khoản sẽ được nhập vào gốc, đồng thời một phần tiền từ tài khoản được trích ra để góp quỹ bảo hiểm rủi ro. Lãi suất cũng tương đương lãi suất tiền gửi kỳ hạn 12 tháng ở một số ngân hàng. Số tiền trích cho bảo hiểm rủi ro tỉ lệ với số tiền bảo hiểm mà khách hàng yêu cầu. Khi khách hàng đóng phí vào, một phần được trích cho chi phí của công ty bảo hiểm gọi là <i>phí ban đầu</i>, phần còn lại được cộng vào số dư tài khoản. Cũng như sản phẩm bảo hiểm truyền thống, phí ban đầu giảm dần theo tuổi của hợp đồng. Loại sản phẩm liên kết chung này có ưu điểm là khách hàng có thể yêu cầu số tiền bảo hiểm rất cao so với phí đóng hàng năm, có thể rút tiền từ tài khoản. Khách hàng có thể quyết định tỉ lệ của phần thứ nhất trong tổng phí đóng vào, tỉ lệ càng lớn thì lợi nhuận càng cao, có khi cao hơn gửi tiết kiệm ở ngân hàng.</p>
+<p>Những sản phẩm bảo hiểm nhân thọ kiểu <i><a href="bhnt-lien-ket-chung">liên kết chung</a></i> sẽ không có bảo tức chia hàng năm, thay vào đó khách hàng có một tài khoản như tài khoản ở ngân hàng, mỗi tháng lãi trên số dư tài khoản sẽ được nhập vào gốc, đồng thời một phần tiền từ tài khoản được trích ra để góp quỹ bảo hiểm rủi ro. Lãi suất cũng tương đương lãi suất tiền gửi kỳ hạn 12 tháng ở một số ngân hàng. Số tiền trích cho bảo hiểm rủi ro tỉ lệ với số tiền bảo hiểm mà khách hàng yêu cầu. Khi khách hàng đóng phí vào, một phần được trích cho chi phí của công ty bảo hiểm gọi là <i>phí ban đầu</i>, phần còn lại được cộng vào số dư tài khoản. Cũng như sản phẩm bảo hiểm truyền thống, phí ban đầu giảm dần theo tuổi của hợp đồng. Loại sản phẩm liên kết chung này có ưu điểm là khách hàng có thể yêu cầu số tiền bảo hiểm rất cao so với phí đóng hàng năm, có thể rút tiền từ tài khoản. Khách hàng có thể quyết định tỉ lệ của phần thứ nhất trong tổng phí đóng vào, tỉ lệ càng lớn thì lợi nhuận càng cao, có khi cao hơn gửi tiết kiệm ở ngân hàng.</p>
 <p>Mặc dù chi phí ở bảo hiểm nhân thọ cao hơn chi phí ở ngân hàng một chút nhưng đối với nhiều người để dành tiền dài hạn bằng bảo hiểm nhân thọ chắc chắn có kết quả tốt hơn để dành tiền ở ngân hàng. Lý do:</p>
 <ol><li>Công ty bảo hiểm nhắc khách hàng tiết kiệm đều đặn.</li>
 <li>Khi đáo hạn sổ tiết kiệm, người ta thường lấy một phần tiền lãi đem tiêu vì nó lẻ, cho nên dù không mất đi đâu đồng nào nhưng kết quả tiết kiệm dài hạn sẽ ít hơn tính toán. Một số người thậm chí còn tiêu cả phần gốc khi bị cám dỗ trong những đợt khuyến mãi tivi, xe mới, điện thoại mới… Tiền để trong tài khoản bảo hiểm không tự quay về khách hàng nên không bị hao hụt.</li>
@@ -384,7 +384,7 @@ data-ad-slot="3830899615">
 
 <div class="todiscuss">
 Các bài liên quan:
-<br>* <a href="bhnt-lien-ket-chung.html">BHNT liên kết chung là gì?</a>
+<br>* <a href="bhnt-lien-ket-chung">BHNT liên kết chung là gì?</a>
 <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132804613009051648" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/376045612561053" rel="nofollow" target="_blank">Facebook</a></div>
 
   <hr>
