--- a/huu-ich/cau-chuyen/bat-dau-dau-tu.html
+++ b/huu-ich/cau-chuyen/bat-dau-dau-tu.html
@@ -167,8 +167,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -190,7 +190,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -285,7 +285,7 @@ data-ad-slot="3830899615">
 <h2>Bạn PHẢI đầu tư</h2>
 <p>Hãy nhìn bất cứ người nào trên 60 hoặc 70 xung quanh bạn. Họ sống thế nào? Rất có thể bạn sẽ nhìn thấy hoặc biết một số người sống chật vật, và những người khác đang sống tốt. Sự khác biệt giữa họ là gì? Câu trả lời khá chắc là, sự khác biệt giữa những người sống tốt và những người chật vật là một nhóm có đầu tư và nhóm kia thì không. Bạn muốn có tương lai nào trong hai tương lai trên? Chỉ có một cách để có được tương lai tốt là: Bạn phải đầu tư.</p>
 <h3>Con chim đi sớm thực sự bắt được sâu</h3>
-<p>Một số có thể đồng ý rằng đầu tư là khôn ngoan… nhưng bây giờ chưa đến lúc. Nghĩ vậy thật là ngu ngốc, và đây là lý do tại sao: Nếu bạn nhìn vào biểu đồ dưới đây, nó cho thấy giá trị của việc đầu tư 100$ hàng tháng với lợi nhuận trung bình 8%/năm (lợi nhuận trong dài hạn điển hình ở các <a href="../dau-tu-co-phieu/quy-dau-tu.html">quỹ đầu tư</a> chỉ số):</p>
+<p>Một số có thể đồng ý rằng đầu tư là khôn ngoan… nhưng bây giờ chưa đến lúc. Nghĩ vậy thật là ngu ngốc, và đây là lý do tại sao: Nếu bạn nhìn vào biểu đồ dưới đây, nó cho thấy giá trị của việc đầu tư 100$ hàng tháng với lợi nhuận trung bình 8%/năm (lợi nhuận trong dài hạn điển hình ở các <a href="../dau-tu-co-phieu/quy-dau-tu">quỹ đầu tư</a> chỉ số):</p>
 <div class="center"><amp-img alt="Giá trị đầu tư" src="/images/Investment-value-over-time.png" width="483" height="457" layout="responsive"></amp-img><br>
 Màu cam là số tiền bỏ vào, màu xanh dương là số tiền thu được.</div>
 <p>Ví dụ nếu bạn trì hoãn việc đầu tư năm năm, bạn tưởng rằng bạn sẽ bị giảm đi 9300$, tức là giá trị của khoản đầu tư của mình sau năm năm đầu tiên. Nhưng bạn đã lầm, rất sai lầm. Năm năm bạn bỏ lỡ không phải là năm năm đầu, mà là năm năm cuối. Nói cách khác, bạn sẽ bị giảm đi 21.000$, đó là hiệu số giữa giá trị 60.000$ sau 20 năm và giá trị 39.000$ sau 15 năm. Đó là hơn 50% giá trị của khoản đầu tư của mình sau 15 năm.</p>
@@ -356,10 +356,10 @@ data-ad-slot="3830899615">
 <h3>Nhận xét</h3>
 <p>Tại sao những người chưa trải qua một cuộc suy thoái lại không đầu tư? Có phải vì họ chưa thấy cảnh thiếu thốn?
 <br>Bạn có thấy những người già đi bán vé số, đi xin tiền trên đường phố không?</p>
-<p>Rất nhiều người cho rằng đầu tư là một việc gì rất lớn và khó, họ không nên nghĩ đến nó. Thật ra đầu tư bắt đầu từ việc <a href="../dung-so-dau-tu.html">đơn giản nhất</a> là gửi tiết kiệm ở ngân hàng và tiếp theo là những việc <a href="../cach-dau-tu.html">hiện đại hơn</a>.</p>
+<p>Rất nhiều người cho rằng đầu tư là một việc gì rất lớn và khó, họ không nên nghĩ đến nó. Thật ra đầu tư bắt đầu từ việc <a href="../dung-so-dau-tu">đơn giản nhất</a> là gửi tiết kiệm ở ngân hàng và tiếp theo là những việc <a href="../cach-dau-tu">hiện đại hơn</a>.</p>
 <p>Bạn cần phân biệt hai việc: làm ra tiền và giữ tiền. Bạn cần phải dành nhiều thời gian, năng nổ và nổi bật trong việc làm ra tiền, đó là việc chính của bạn. Còn việc đầu tư để tiền sinh lợi thì để những chuyên viên tài chính làm giúp bạn.</p>
-<p>Bạn có ngạc nhiên khi biết rằng người dân ở các nước giàu cũng phải <a href="../tich-luy-6.html">tự để dành tiền cho tuổi già</a>?
-<p><a href="../dau-tu-co-phieu/quy-dau-tu.html">Quỹ đầu tư</a> đã có mặt ở Việt Nam từ năm 2004. Quỹ đầu tư dạng mở có mặt ở Việt Nam từ năm 2008. Quỹ đầu tư dạng mở rất tiện cho người dân để dành tiền.</p>
+<p>Bạn có ngạc nhiên khi biết rằng người dân ở các nước giàu cũng phải <a href="../tich-luy-6">tự để dành tiền cho tuổi già</a>?
+<p><a href="../dau-tu-co-phieu/quy-dau-tu">Quỹ đầu tư</a> đã có mặt ở Việt Nam từ năm 2004. Quỹ đầu tư dạng mở có mặt ở Việt Nam từ năm 2008. Quỹ đầu tư dạng mở rất tiện cho người dân để dành tiền.</p>
 <p>Kế hoạch hưu trí tự nguyện đã có ở Việt Nam từ năm 2013 nhưng có ít doanh nghiệp <a href="https://lhboi.name.vn/huu-ich/tien-thuong-cuoi-nam">thưởng cho nhân viên</a> theo cách này. Khi người chủ không giúp bạn thì bạn phải tự trả tiền cho mình trước.</p>
 <!-- AMP In-article 1 -->
 <amp-ad
@@ -390,11 +390,11 @@ data-ad-slot="3830899615">
 <p>Để biết được cần phải <b>trả tiền cho mình trước</b> bao nhiêu cho đủ thì hãy dùng bảng tính <a href="../ke-hoach-tai-chinh/">KHTC</a> để tính. KHTC có tính đến yếu tố thu nhập tăng dần nên sẽ tính ra mức trả tiền cho mình tăng dần, khi lương thấp thì trả cho mình thấp sau đó tăng dần lên.</p>
 <div class="todiscuss">
 Các bài liên quan:
-<br>* <a href="../dung-so-dau-tu.html">Đừng sợ đầu tư</a>
-<br>* <a href="../cach-dau-tu.html">Phân biệt những cách đầu tư và đầu cơ</a>
-<br>* <a href="../dau-tu-co-phieu/quy-dau-tu.html">Tìm hiểu về quỹ đầu tư</a>
+<br>* <a href="../dung-so-dau-tu">Đừng sợ đầu tư</a>
+<br>* <a href="../cach-dau-tu">Phân biệt những cách đầu tư và đầu cơ</a>
+<br>* <a href="../dau-tu-co-phieu/quy-dau-tu">Tìm hiểu về quỹ đầu tư</a>
 <br>* <a href="../ke-hoach-tai-chinh/">Lập kế hoạch ổn định tài chính suốt đời thật đơn giản</a>
-<br>* <a href="../tich-luy-6.html">Lương hưu ở các nước giàu</a>
+<br>* <a href="../tich-luy-6">Lương hưu ở các nước giàu</a>
 <br>Mọi ý kiến thảo luận xin ghi vào các trang: <a href="https://twitter.com/GiauCham/status/1132815538449670144" target="_blank">Twitter</a> hoặc <a href="https://www.facebook.com/lamgiauchacchan/posts/636092159889729" rel="nofollow" target="_blank">Facebook</a></div>
 
   <hr>
