--- a/huu-ich/cau-chuyen/bot-lo-ve-tien.html
+++ b/huu-ich/cau-chuyen/bot-lo-ve-tien.html
@@ -167,8 +167,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -190,7 +190,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -333,12 +333,12 @@ data-ad-slot="3830899615">
 <li>Không để dành: kiếm được bao nhiêu xài hết bấy nhiêu vì để tiền lại thì bị mất giá, uổng lắm.</li>
 <li>Đổi tiền ra vàng hay ngoại tệ.</li>
 </ol>
-Rõ ràng là cách thứ nhất sẽ tạo ra khó khăn về sau. Khó khăn đến mức nào thì bạn có thể xem ở <a href="../tich-luy.html">bài này</a>.
-<br>Cách thứ hai có phải là cách hay nhất không? Mời bạn xem bài phân tích <a href="../tich-luy-dai-han.html">ở đây</a>.
+Rõ ràng là cách thứ nhất sẽ tạo ra khó khăn về sau. Khó khăn đến mức nào thì bạn có thể xem ở <a href="../tich-luy">bài này</a>.
+<br>Cách thứ hai có phải là cách hay nhất không? Mời bạn xem bài phân tích <a href="../tich-luy-dai-han">ở đây</a>.
 <div class="todiscuss">
 Các bài liên quan:
-<br>* <a href="../tich-luy.html">Tích luỹ tiền để đủ sống trọn đời</a>
-<br>* <a href="../tich-luy-dai-han.html">So sánh các cách tích luỹ tài sản dài hạn</a>
+<br>* <a href="../tich-luy">Tích luỹ tiền để đủ sống trọn đời</a>
+<br>* <a href="../tich-luy-dai-han">So sánh các cách tích luỹ tài sản dài hạn</a>
 </div>
 
   <hr>
