--- a/huu-ich/cau-chuyen/index.html
+++ b/huu-ich/cau-chuyen/index.html
@@ -158,8 +158,8 @@ div.footer { font-size: 80%; color: red; text-align: center; }
                 <span></span>
             </button>
   <h3 class="myheader"><a href='/'>Giới-thiệu</a></h3>
-    <a href='/home/about.html'>Thân-thế</a><br>
-    <a href='/home/cv.html'>Thành-tích</a><br>
+    <a href='/home/about'>Thân-thế</a><br>
+    <a href='/home/cv'>Thành-tích</a><br>
   <h3 class="myheader"><a href='/huu-ich/'>Hữu-ích</a></h3>
 
       <h4 class="myheader"><a href='/huu-ich/ke-hoach-tai-chinh/'>Lập-kế-hoạch-tài-chính</a></h4>
@@ -181,7 +181,7 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
   <h3 class="myheader">Danh mục</h3>
     <a href='/download/'>Download</a><br>
-    <a href='/sitemap.html'>Mục lục</a>
+    <a href='/sitemap'>Mục lục</a>
   <h3 class="myheader"></h3>
   <br>
   <br>
@@ -221,17 +221,17 @@ div.footer { font-size: 80%; color: red; text-align: center; }
 
 <!-- body here -->
 <dl>
-  <dt><a href='bat-dau-dau-tu.html'>Bắt-đầu đầu-tư</a></dt>
+  <dt><a href='bat-dau-dau-tu'>Bắt-đầu đầu-tư</a></dt>
   <dd>Thời-điểm tốt-nhất để bắt-đầu đầu-tư là <b>ngay-bây-giờ</b>.</dd>
-  <dt><a href='nhung-quyet-dinh-tot-cho-tuoi-gia.html'>Những quyết-định tốt cho tuổi-già</a></dt>
+  <dt><a href='nhung-quyet-dinh-tot-cho-tuoi-gia'>Những quyết-định tốt cho tuổi-già</a></dt>
   <dd>Nên làm theo bài-học này từ sớm.</dd>
-  <dt><a href='nghi-huu-som.html'>Về-hưu trước 40 tuổi</a></dt>
+  <dt><a href='nghi-huu-som'>Về-hưu trước 40 tuổi</a></dt>
   <dd>Một trường-hợp tự làm-giàu sớm một cách đơn-giản.</dd>
-  <dt><a href='tranh-mang-no.html'>Tránh mang nợ</a></dt>
+  <dt><a href='tranh-mang-no'>Tránh mang nợ</a></dt>
   <dd>Đừng chi-tiêu quá khả năng kiếm-tiền.</dd>
-  <dt><a href='mua-nha-hay-dau-tu.html'>Để tiền mua-nhà hay đầu-tư</a></dt>
+  <dt><a href='mua-nha-hay-dau-tu'>Để tiền mua-nhà hay đầu-tư</a></dt>
   <dd>Một cách nhìn khác về việc tích-luỹ tài-sản.</dd>
-  <dt><a href='bot-lo-ve-tien.html'>6 điều giúp tôi bớt lo-lắng về tiền-bạc</a></dt>
+  <dt><a href='bot-lo-ve-tien'>6 điều giúp tôi bớt lo-lắng về tiền-bạc</a></dt>
   <dd>Không giàu-sang nhưng vẫn không quá lo-lắng về tiền-bạc.</dd>
 </dl>
   <hr>
